--- a/admin/index.html
+++ b/admin/index.html
@@ -12,13 +12,13 @@
     
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,700,800,900" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/infinite-slider.css" rel="stylesheet">
-    <link href='fonts/FontAwesome.otf' rel='stylesheet' type='text/css'>
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/w3.css" rel="stylesheet">
-    <link href="css/hover-min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/font-awesome.min.css" rel="stylesheet">
+    <link href="../css/infinite-slider.css" rel="stylesheet">
+    <link href='../fonts/FontAwesome.otf' rel='stylesheet' type='text/css'>
+    <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/w3.css" rel="stylesheet">
+    <link href="../css/hover-min.css" rel="stylesheet">
 
 
 </head>
@@ -35,7 +35,7 @@
                 <div class="container-fluid col-md-2 left-pane"  >
                     <div class="row container-fluid ">
                         <div class="row container-fluid header" style="padding-top:50px; padding-bottom:50px">
-                                <img src="img/logo.png" width="100%" height="100%"  alt="Reference">
+                                <img src="../img/logo.png" width="100%" height="100%"  alt="Reference">
                         </div>
 
                         <a href="#dashboard"><div class="row col-md-12" style="padding-top:20px; padding-bottom:20px; border-left: 2px solid #ffc922; color: white">
