First Commmit for Faith

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                 <li><a class="ovrbtn" href="#x" title="">ABOUT US</a></li>
                                 <li><a class="ovrbtn" href="faq.html" title="">FREQUENTLY ASKED QUESTIONS</a></li>
                                 <li><a class="ovrbtn" href="#x" title="">CONTACT US</a></li>
-                                <li><a class="lastbtn" href="register/step1.php" style="" title="">BOOK A SERVICE</a></li>
+                                <li><a class="lastbtn" href="register/step1.php"title="">BOOK A SERVICE</a></li>
 
                             </ul>
                         </div><!-- /.navbar-collapse -->
