First Commmit for Faith

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Dreacot">
     <title>Welcome to the Babcock University Transport Scheme</title>
 
-    <!-- <link href="https://fonts.googleapis.com/css?family=Raleway:400,700,800,900" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700,800,900" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/owl.carousel.css">
     <link rel="stylesheet" type="text/css" href="css/owl.theme.default.min.css">
-    
+
 
 </head>
 
@@ -56,7 +56,7 @@
                                 <li><a class="ovrbtn" href="#x" title="">ABOUT US</a></li>
                                 <li><a class="ovrbtn" href="faq.html" title="">FREQUENTLY ASKED QUESTIONS</a></li>
                                 <li><a class="ovrbtn" href="#x" title="">CONTACT US</a></li>
-                                <li><a class="lastbtn" href="register/step1.php"title="">BOOK A SERVICE</a></li>
+                                <li><a class="lastbtn" href="register/step1.php" title="">BOOK A SERVICE</a></li>
 
                             </ul>
                         </div><!-- /.navbar-collapse -->
@@ -211,73 +211,47 @@
 
         <section style="background-color: #333; padding: 30px">
             <div class="container-fluid">
+                <h1 style="text-align: center; color: #fff">TESTIMONIALS</h1>
                 <div class="img-gallery owl-carousel owl-theme">
-                    <div class="item"><h4>1</h4></div>
-                    <div class="item"><h4>2</h4></div>
-                    <div class="item"><h4>3</h4></div>
-                    <div class="item"><h4>4</h4></div>
-                    <div class="item"><h4>5</h4></div>
-                    <div class="item"><h4>6</h4></div>
-                    <div class="item"><h4>7</h4></div>
-                    <div class="item"><h4>8</h4></div>
-                    <div class="item"><h4>9</h4></div>
-                    <div class="item"><h4>10</h4></div>
-                    <div class="item"><h4>11</h4></div>
-                    <div class="item"><h4>12</h4></div>
+                    <div class="item">
+                        <h4>1</h4>
+                    </div>
+                    <div class="item">
+                        <h4>2</h4>
+                    </div>
+                    <div class="item">
+                        <h4>3</h4>
+                    </div>
+                    <div class="item">
+                        <h4>4</h4>
+                    </div>
+                    <div class="item">
+                        <h4>5</h4>
+                    </div>
+                    <div class="item">
+                        <h4>6</h4>
+                    </div>
+                    <div class="item">
+                        <h4>7</h4>
+                    </div>
+                    <div class="item">
+                        <h4>8</h4>
+                    </div>
+                    <div class="item">
+                        <h4>9</h4>
+                    </div>
+                    <div class="item">
+                        <h4>10</h4>
+                    </div>
+                    <div class="item">
+                        <h4>11</h4>
+                    </div>
+                    <div class="item">
+                        <h4>12</h4>
+                    </div>
                 </div>
             </div>
         </section>
-        <!-- <section>
-            <div class="col-md-2">
-
-            </div>
-
-            <div class="container col-md-8" style="background-color: #333;">
-
-                <h1 class="text-center" style="color:white; font-size:50px">TESTIMONIALS</h1>
-                <div class="container col-md-12 text-center" style="margin-top:100px; ">
-
-                    <div class="col-md-3">
-                        <div class="testimonia-image">
-
-                        </div>
-
-
-                        <div class="testimonial-box">
-
-                        </div>
-
-                    </div>
-
-                    <div class="col-md-3">
-                        <div class="testimonial-box">
-
-                        </div>
-
-                    </div>
-
-                    <div class="col-md-3">
-                        <div class="testimonial-box">
-
-                        </div>
-
-                    </div>
-
-                    <div class="col-md-3">
-                        <div class="testimonial-box">
-
-                        </div>
-
-                    </div>
-
-                </div>
-            </div>
-
-            <div class="col-md-2">
-
-            </div>
-        </section> -->
-
     </main>
     <footer class="site-footer">
         <div class="container text-center">
@@ -329,7 +303,7 @@
     <script src="js/owlScript.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         $('.carousel[data-type="multi"] .item').each(function () {
             var next = $(this).next();
             if (!next.length) {
@@ -346,7 +320,7 @@
                 next.children(':first-child').clone().appendTo($(this));
             }
         });
-    </script>
+    </script> -->
     <script>
         function myFunction(x) {
             x.classList.toggle("change");
